src/objects/Session__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Include_in_Recommendations_Stored__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is a copy of the Include in Recommendations formula field that is populated on a nightly schedule. Using this field instead of the formula field in queries improves performance significantly.</description>
        <inlineHelpText>This is a copy of the Include in Recommendations formula field that is populated on a nightly schedule. Using this field instead of the formula field in queries improves performance significantly.</inlineHelpText>
        <label>Include in Recommendations Stored</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_in_Recommendations__c</fullName>
        <formula>Session_Date__c &gt; NOW() &amp;&amp; 
(ISBLANK(Maximum_Attendees__c) || Maximum_Attendees__c &gt; Number_of_Attendees__c ) &amp;&amp;
!ISBLANK(Topics__c) &amp;&amp;
!CONTAINS(Name, &apos;private&apos;) &amp;&amp;
!CONTAINS(Name, &apos;executive track&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Criteria:
 - Session is in the future
 - Session isn&apos;t full
 - Session has a topic
 - Name doesn&apos;t include &apos;private&apos; or &apos;executive track&apos;</inlineHelpText>
        <label>Include in Recommendations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Beginner</fullName>
                </value>
                <value>
                    <fullName>Intermediate</fullName>
                </value>
                <value>
                    <fullName>Advanced</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Levels__c</fullName>
        <inlineHelpText>Levels this session is appropriate for.</inlineHelpText>
        <label>Levels</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Levels</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Maximum_Attendees__c</fullName>
        <label>Maximum Attendees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Attendees__c</fullName>
        <label>Number of Attendees</label>
        <summaryForeignKey>Attendee__c.Session__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Open_Slots__c</fullName>
        <formula>Maximum_Attendees__c - Number_of_Attendees__c</formula>
        <inlineHelpText>Formula: Maximum Attendees minus Number of Attendees</inlineHelpText>
        <label>Open Slots</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Roles__c</fullName>
        <inlineHelpText>Roles this session is appropriate for.</inlineHelpText>
        <label>Roles</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Roles</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Session_Date__c</fullName>
        <label>Session Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Topics__c</fullName>
        <inlineHelpText>Topics is this session covers.</inlineHelpText>
        <label>Topics</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Topics</valueSetName>
        </valueSet>
    </fields>
    <label>Session</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Session_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Session Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>